// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #1a8385;
}

.c0:hover {
  cursor: pointer;
  background-color: #1a8385;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #1a8385;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #1a8385;
  color: white;
}

<button
  class="c0"
  type="button"
>
  Hello world
</button>
`;

exports[`it works with ghost 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: transparent;
  color: #292B3E;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #E8E8E8;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #E8E8E8;
  color: #292B3E;
}

<button
  class="c0"
  type="button"
>
  Hello world
</button>
`;

exports[`it works with size large 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  Hello world
</button>
`;

exports[`it works with size medium 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  Hello world
</button>
`;

exports[`it works with size small 1`] = `
.c0 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.3rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c0:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c0:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c0:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

<button
  class="c0"
  sizes="small"
  type="button"
>
  Hello world
</button>
`;
